2008-12-02  Jb Evain  <jbevain@novell.com>

	* AssemblyResolver.cs: backport of r120410.
	In AreSame(TypeReference,TypeReference), fix the case where we
	compare two GenericInstanceType of the same element type
	with differente generic arguments.

2008-11-29  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyResolver.cs: Use Has{x} to avoid creating fields and 
	parameters collections while resolving.
	* EngineController.cs: Use Has{x} whenever possible to avoid the
	creation of empty collections in Cecil.

2008-11-19  Sebastien Pouliot  <sebastien@ximian.com>

	* Rule.cs: Do not create a new Uri each time we ask for one (its 
	not needed as it is read only).
	* Runner.cs: Avoid needlessly calling IsVisible rock on types and 
	methods when the runner is analyzing everything.

2008-11-08  Sebastien Pouliot  <sebastien@ximian.com>

	* EngineController.cs: Fix potential (if/when a runner use multiple
	threads) race condition on raising events (self-test).

2008-11-07  Sebastien Pouliot  <sebastien@ximian.com>

	* ApplicabilityScope.cs, Confidence.cs, RuleResult.cs, 
	Severity.cs: Clearly specify [Serializable] on enums (self-test)

2008-10-29  Jesse Jones  <jesjones@mindspring.com>

	* Bitmask.cs: Added unchecked statement to Bitmask.Clear so that
	it works when compiling with checked arithmetic.

2008-10-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Bitmask.cs: Handle null correctly to avoid NRE (self-test)

2008-10-24  Sebastien Pouliot  <sebastien@ximian.com>

	* IRule.cs: Remove IRunner parameter from TearDown as it is
	not helpful (we already have it as a member) and could be confusing
	leading to bugs.
	* Rule.cs: Add a null check in Initialize (self-test). Update 
	TearDown call with API change.
	* Runner.cs: Update TearDown call with API change.
	* Symbols.cs: Add a null check in GetSource (self-test).

2008-10-17  Sebastien Pouliot  <sebastien@ximian.com>

	* Bitmask.cs: Implement IEquatable<T> (self-test).