@@ -1,3 +1,8 @@
+2008-12-01  Jesse Jones  <jesjones@mindspring.com>
+
+	* Symbols.cs: Added a comment describing some problems with
+	doing source line formatting in this file.
+
 2008-12-02  Jb Evain  <jbevain@novell.com>
 
 	* AssemblyResolver.cs: backport of r120410.
